#221 Fix chat box button alignment
Buttons will also now stay attached to the top of the chat box when there are multiple lines of text

--- a/src/modules/main/chat/_chatbox.scss
+++ b/src/modules/main/chat/_chatbox.scss
@@ -89,6 +89,7 @@
     // Gift/GIF/Sticker/Emoji buttons
     .expression-picker-chat-input-button{
         margin: 6px 4px 0 0;
+        align-items: flex-start;
         .button-ejjZWC{
             height: 32px;
             width: 32px;
